<package>
 <name>iir_filter</name>
  <version>0.1.0</version>
  <description>
    IIR Filter C++ implementation.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/IIR Filter</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  
  <run_depend>eigen</run_depend>


</package>
